--- a/src/components/article/index.module.css
+++ b/src/components/article/index.module.css
@@ -13,6 +13,9 @@
     display: flex;
     flex-direction: row-reverse;
   }
+  .prixtot {
+    background-color: red;
+  }
   .adroite {
     display: flex;
     justify-content: flex-end
