--- a/src/components/article/index.module.css
+++ b/src/components/article/index.module.css
@@ -13,6 +13,14 @@
     display: flex;
     flex-direction: row-reverse;
   }
+  .plusmoinsajout {
+    display: flex;
+    justify-content: center;
+  }
+  .del {
+    display: flex;
+    justify-content: center;
+  }
   .prixtot {
     background-color: red;
   }
