--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,12 @@ h1 {
   align-items: center;
     justify-content: space-evenly;
   gap: 20px;
+  background-color: black;
+}
+.footer {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
 }
 
 
